--- a/app/src/main/res/layout/listfilmview.xml
+++ b/app/src/main/res/layout/listfilmview.xml
@@ -5,15 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f1f1f1"
-    android:padding="12dp"
+    android:padding="5dp"
     tools:context="com.example.pr_idi.mydatabaseexample.ListFilmActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
