--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,7 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<<<<<<< HEAD
     <item android:id="@+id/action_search"
 
         android:title="@string/search"
@@ -10,15 +9,17 @@
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView" />
 
-=======
->>>>>>> 0156792a01e8ab1f9097cba32894dd6101015cdf
     <!-- "Mark Favorite", should appear as action button if possible -->
     <item
         android:id="@+id/action_add_item"
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/crear_pelicula"
         app:showAsAction="ifRoom"/>
-
+    <item
+        android:id="@+id/action_delete_item"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="@string/borrar_pelicula"
+        app:showAsAction="ifRoom"/>
     <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_about"
         android:title="@string/about"
@@ -28,8 +29,4 @@
         android:title="@string/help"
         app:showAsAction="never"/>
 
-<<<<<<< HEAD
-
-=======
->>>>>>> 0156792a01e8ab1f9097cba32894dd6101015cdf
 </menu>
