--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,9 @@
 <resources>
 
     <!-- Base application theme. -->
-<<<<<<< HEAD
 
 
-    <style name="Base.AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+   <!-- <style name="Base.AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorAccent">@color/accentColor</item>
@@ -13,14 +12,13 @@
     </style>
     <style name="AppTheme" parent="Base.AppTheme">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-=======
+        <item name="android:statusBarColor">@android:color/transparent</item> -->
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
->>>>>>> 0156792a01e8ab1f9097cba32894dd6101015cdf
     </style>
 
 </resources>
