--- a/app/src/main/res/layout/my_text_view.xml
+++ b/app/src/main/res/layout/my_text_view.xml
@@ -1,65 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="@android:color/white">
 
-    <TextView
-        android:text="Titulo"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textTitulo"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:textColor="@android:color/black"
-        android:textColorHighlight="@android:color/black" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:text="Pais"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textPais"
-        android:textColorHighlight="@android:color/black"
-        android:textColor="@android:color/black"
-        android:layout_below="@+id/textTitulo"
-        android:layout_alignParentEnd="true" />
+        <TextView
+            android:text="Titulo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textTitulo"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:textColor="@android:color/black"
+            android:textColorHighlight="@android:color/black"
+            android:layout_weight="1" />
 
-    <TextView
-        android:text="Any"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textAny"
-        android:textColor="@android:color/black" />
+        <TextView
+            android:text="Pais"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textPais"
+            android:textColorHighlight="@android:color/black"
+            android:textColor="@android:color/black"
+            android:layout_below="@+id/textTitulo"
+            android:layout_alignParentEnd="true"
+            android:layout_weight="1" />
 
-    <TextView
-        android:text="Protagonista"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textProtagonista"
-        android:textColorHighlight="@android:color/black"
-        android:textColor="@android:color/black"
-        android:layout_below="@+id/textProtagonista"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:text="Any"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textAny"
+            android:textColor="@android:color/black"
+            android:layout_weight="1" />
 
-    <TextView
-        android:text="Director"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textDirector"
-        android:textColorHighlight="@android:color/black"
-        android:textColor="@android:color/black"
-        android:layout_below="@+id/textView4"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:text="Protagonista"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textProtagonista"
+            android:textColorHighlight="@android:color/black"
+            android:textColor="@android:color/black"
+            android:layout_below="@+id/textProtagonista"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1" />
 
-    <TextView
-        android:text="NotaCritica"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textNotaCritica"
-        android:textColorHighlight="@android:color/black"
-        android:textColor="@android:color/black"
-        android:layout_below="@+id/textNotaCritica"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:text="Director"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textDirector"
+            android:textColorHighlight="@android:color/black"
+            android:textColor="@android:color/black"
+            android:layout_below="@+id/textView4"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1" />
+
+        <TextView
+            android:text="NotaCritica"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textNotaCritica"
+            android:textColorHighlight="@android:color/black"
+            android:textColor="@android:color/black"
+            android:layout_below="@+id/textNotaCritica"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1" />
+    </LinearLayout>
 
 
 </LinearLayout>
