--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -15,10 +15,10 @@
         android:orientation="vertical">
 
         <!-- The ActionBar displayed at the top -->
-        <include
+        <!--include
             layout="@layout/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" /-->
 
 
         <!-- The main content view -->
