--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,11 +4,14 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
 
-
     <dimen name="header_left_padding">16dp</dimen>
     <dimen name="header_height">192dp</dimen>
 
     <dimen name="perfil_image_size">64dp</dimen>
+
+    <dimen name="padding_between">8dp</dimen>
+    <dimen name="button_padding">8dp</dimen>
+    <dimen name="normal_padding">4dp</dimen>
 
 
 </resources>
