--- a/app/src/main/res/layout/item_titlesearch.xml
+++ b/app/src/main/res/layout/item_titlesearch.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="@color/window_background"
+    android:layout_height="match_parent"
+    android:background="@color/window_background"
     android:layout_marginBottom="2dp"
     android:layout_marginTop="2dp"
     android:paddingBottom="2dp"
@@ -15,44 +15,64 @@ android:background="@color/window_background"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bright_foreground_material_dark">
-
-        <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Titulo Frase"
-        android:id="@+id/category"
-        android:textSize="19sp"
-        android:textColor="#0c1a3d"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dp"
+        android:background="@color/bright_foreground_material_dark"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageView4"
-        android:layout_toEndOf="@+id/imageView4"
-            android:layout_weight="1" />
+        android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Titulo Frase"
+            android:id="@+id/category"
+            android:textSize="19sp"
+            android:textColor="#0c1a3d"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginBottom="2dp"
             android:layout_marginTop="2dp"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="4dp"
-            android:text="Texto Frase 2"
-            android:id="@+id/texto2"
-            android:layout_below="@+id/category"
+            android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/imageView4"
             android:layout_toEndOf="@+id/imageView4"
-            android:layout_weight="1"
-            android:textSize="15sp" />
+            android:layout_weight="1" />
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginBottom="1dp"
+                android:layout_marginTop="5dp"
+                android:id="@+id/imageView4"
+                android:cropToPadding="false"
+                android:src="@mipmap/ic_launcher"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignBottom="@+id/texto"
+                android:maxHeight="35dp"
+                android:maxWidth="74dp"
+                android:adjustViewBounds="true"
+                android:layout_weight="1" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="4dp"
+                android:text="Texto Frase 2"
+                android:id="@+id/texto2"
+                android:layout_below="@+id/category"
+                android:layout_toRightOf="@+id/imageView4"
+                android:layout_toEndOf="@+id/imageView4"
+                android:layout_weight="1"
+                android:textSize="15sp" />
 
         </LinearLayout>
 
