--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -41,13 +41,13 @@ android:background="@color/window_background"
             android:layout_marginTop="2dp"
             android:layout_marginLeft="6dp"
             android:layout_marginRight="4dp"
-            android:text="Texto Frase 2"
+            android:text="Texto director 2"
             android:id="@+id/texto2"
             android:layout_below="@+id/category"
             android:layout_toRightOf="@+id/imageView4"
             android:layout_toEndOf="@+id/imageView4"
             android:layout_weight="1"
-            android:textSize="15sp" />
+            android:textSize="16sp" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -79,14 +79,15 @@ android:background="@color/window_background"
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="4dp"
 
-            android:text="Texto Frase"
+            android:text="Texto puntaje"
             android:id="@+id/texto"
             android:layout_below="@+id/category"
             android:layout_toRightOf="@+id/imageView4"
             android:layout_toEndOf="@+id/imageView4"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:paddingBottom="2dp" />
+                android:paddingBottom="2dp"
+                android:textSize="15sp" />
         </LinearLayout>
 
     </LinearLayout>
