--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -5,11 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:background="@color/window_background"
-    android:layout_marginBottom="2dp"
-    android:layout_marginTop="2dp"
-    android:paddingBottom="2dp"
-    android:paddingTop="2dp">
+    android:layout_marginTop="1dp">
 
     <LinearLayout
         android:orientation="vertical"
@@ -67,7 +63,7 @@ android:background="@color/window_background"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
             android:layout_alignBottom="@+id/texto"
-            android:maxHeight="35dp"
+            android:maxHeight="37dp"
             android:maxWidth="74dp"
             android:adjustViewBounds="true"
                 android:layout_weight="1" />
