--- a/app/src/main/res/layout/item_titlesearch.xml
+++ b/app/src/main/res/layout/item_titlesearch.xml
@@ -6,10 +6,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/window_background"
-    android:layout_marginBottom="2dp"
-    android:layout_marginTop="2dp"
-    android:paddingBottom="2dp"
-    android:paddingTop="2dp">
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp">
 
     <LinearLayout
         android:orientation="vertical"
@@ -17,7 +15,8 @@
         android:layout_height="wrap_content"
         android:background="@color/bright_foreground_material_dark"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="1dp">
 
         <TextView
             android:layout_width="match_parent"
