--- a/app/src/main/res/layout/list_titles.xml
+++ b/app/src/main/res/layout/list_titles.xml
@@ -3,5 +3,6 @@
     android:id="@+id/ListView_listado"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="4dp">
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp">
 </ListView>
