--- a/app/src/main/res/menu/menulistapelis.xml
+++ b/app/src/main/res/menu/menulistapelis.xml
@@ -2,6 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item android:id="@+id/action_search"
+
+        android:title="@string/search"
+        android:icon="@android:drawable/ic_menu_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
+    
     <!-- "Mark Favorite", should appear as action button if possible -->
     <item
         android:id="@+id/action_add_item"
