--- a/app/src/main/res/layout/helpdescription1.xml
+++ b/app/src/main/res/layout/helpdescription1.xml
@@ -1,31 +1,311 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/basehelpdescriptionRelativeLayout"
+    xmlns:app="http://schemas.android.com/apk/lib/com.example.pr_idi.mydatabaseexample"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    tools:context="com.example.pr_idi.mydatabaseexample.BaseHelpDescriptionActivity"
+    android:layout_marginBottom="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp">
 
-    <TextView
-        android:text="Titulo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tituloHeader"
-        style="@style/Widget.AppCompat.TextView.SpinnerItem"
-        android:paddingBottom="16dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
-    <TextView
-        android:text="TextView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/body1"
-        android:padding="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:text="titulo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/titulo"
-        android:padding="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-</LinearLayout>
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+            xmlns:tools="http://schemas.android.com/tools"
+            android:orientation="vertical" android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbarAlwaysDrawVerticalTrack="false"
+            android:scrollbarAlwaysDrawHorizontalTrack="false"
+            android:scrollbars="vertical"
+            android:paddingTop="16dp"
+            android:weightSum="1">
+
+
+            <TextView
+                android:text="@string/help_menu1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tituloHeader"
+                style="@style/Widget.AppCompat.TextView.SpinnerItem"
+                android:paddingBottom="16dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                />
+
+            <TextView
+                android:text="@string/help_menu1_text1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/body1"
+                android:layout_gravity="center_vertical|right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:paddingBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingTop="8dp" />
+
+            <TextView
+                android:text="@string/help_menu1_subtitulo1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/subtitulo1"
+                android:padding="8dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:layout_marginTop="8dp" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="51dp"
+                    android:layout_height="49dp"
+                    android:id="@+id/imageView"
+                    android:maxWidth="122dp"
+                    android:maxHeight="102dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    android:layout_marginLeft="3dp"
+                    android:src="@mipmap/toggle_image"
+                    android:layout_marginBottom="20dp"
+                    android:elevation="10dp"
+                    android:background="@android:drawable/dialog_holo_light_frame"
+                    android:layout_gravity="center_vertical|center_horizontal" />
+
+                <TextView
+                    android:text="@string/help_menu1_text2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/body2"
+                    android:layout_gravity="center_vertical|right"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:layout_marginBottom="8dp"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView2"
+                android:adjustViewBounds="true"
+                android:layout_marginLeft="3dp"
+                android:src="@drawable/navdrag_image"
+                android:layout_marginBottom="20dp"
+                android:elevation="10dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_weight="0.04"
+                android:scaleType="fitXY"
+                android:maxWidth="175dp" />
+
+
+            <TextView
+                android:text="@string/help_menu1_subtitulo2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/subtitulo2"
+                android:padding="8dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:layout_marginTop="8dp" />
+
+            <TextView
+                android:text="@string/help_menu1_text3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/body3"
+                android:layout_gravity="center_vertical|right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+
+            <TextView
+                android:text="@string/help_menu1_subtitulo4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/subtitulo4"
+                android:padding="8dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:layout_marginTop="8dp" />
+            <TextView
+                android:text="@string/help_menu1_text5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/body5"
+                android:layout_gravity="center_vertical|right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+            <TextView
+                android:text="@string/help_menu1_text14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/body14"
+                android:layout_gravity="center_vertical|right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+
+            <TextView
+                android:text="@string/help_menu1_subtitulo5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/subtitulo5"
+                android:padding="8dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:layout_marginTop="8dp" />
+            <TextView
+                android:text="@string/help_menu1_text6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/body6"
+                android:layout_gravity="center_vertical|right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+
+            <TextView
+                android:text="@string/help_menu1_subtitulo6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/subtitulo6"
+                android:padding="8dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:layout_marginTop="8dp" />
+            <TextView
+                android:text="@string/help_menu1_text7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/body7"
+                android:layout_gravity="center_vertical|right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+
+            <TextView
+                android:text="@string/help_menu1_subtitulo7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/subtitulo7"
+                android:padding="8dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:layout_marginTop="8dp" />
+            <TextView
+                android:text="@string/help_menu1_text8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/body8"
+                android:layout_gravity="center_vertical|right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+
+            <TextView
+                android:text="@string/help_menu1_subtitulo8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/subtitulo8"
+                android:padding="8dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:layout_marginTop="8dp" />
+            <TextView
+                android:text="@string/help_menu1_text9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/body9"
+                android:layout_gravity="center_vertical|right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+            <ImageView
+                android:layout_width="51dp"
+                android:layout_height="49dp"
+                android:id="@+id/imageView3"
+                android:maxWidth="122dp"
+                android:maxHeight="102dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:layout_marginLeft="3dp"
+                android:src="@drawable/ic_action_search"
+                android:layout_marginBottom="20dp"
+                android:elevation="10dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:layout_gravity="center_vertical|center_horizontal" />
+
+
+            <TextView
+                android:text="@string/help_menu1_subtitulo9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/subtitulo9"
+                android:padding="8dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:layout_marginTop="8dp" />
+            <TextView
+                android:text="@string/help_menu1_text10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/body15"
+                android:layout_gravity="center_vertical|right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+            <TextView
+                android:text="@string/help_menu1_text13"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/body10"
+                android:layout_gravity="center_vertical|right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+
+            <TextView
+                android:text="@string/help_menu1_subtitulo10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/subtitulo10"
+                android:padding="8dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:layout_marginTop="8dp" />
+            <TextView
+                android:text="@string/help_menu1_text11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/body11"
+                android:layout_gravity="center_vertical|right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+
+
+
+
+
+        </LinearLayout>
+
+
+    </ScrollView>
+</RelativeLayout>
