--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -10,4 +10,7 @@
     android:layout_toRightOf="@+id/icon"
     android:text="Item"
     android:textAppearance="?android:attr/textAppearanceMedium"
-    android:textColor="#fff" />
+    android:textColor="#fff"
+
+
+    />
