--- a/app/src/main/res/layout/list_titles.xml
+++ b/app/src/main/res/layout/list_titles.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ListView_listado"
-    android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp">
-</ListView>
+    android:layout_marginTop="1dp"
+    android:background="@color/window_background">
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/ListView_listado"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp">
+    </ListView>
+</RelativeLayout>
