--- a/app/src/main/res/layout/helpdescription1.xml
+++ b/app/src/main/res/layout/helpdescription1.xml
@@ -6,18 +6,14 @@
     xmlns:app="http://schemas.android.com/apk/lib/com.example.pr_idi.mydatabaseexample"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context="com.example.pr_idi.mydatabaseexample.BaseHelpDescriptionActivity"
-    android:layout_marginBottom="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp">
+    tools:context="com.example.pr_idi.mydatabaseexample.BaseHelpDescriptionActivity">
 
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp">
 
         <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -30,7 +26,9 @@
             android:scrollbarAlwaysDrawHorizontalTrack="false"
             android:scrollbars="vertical"
             android:paddingTop="16dp"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
 
             <TextView
@@ -150,16 +148,7 @@
                 android:layout_marginBottom="8dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp" />
-            <TextView
-                android:text="@string/help_menu1_text14"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/body14"
-                android:layout_gravity="center_vertical|right"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:layout_marginBottom="8dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp" />
+
 
             <TextView
                 android:text="@string/help_menu1_subtitulo5"
@@ -179,6 +168,17 @@
                 android:layout_marginBottom="8dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp" />
+            <TextView
+                android:text="@string/help_menu1_text14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/body14"
+                android:layout_gravity="center_vertical|right"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+
 
             <TextView
                 android:text="@string/help_menu1_subtitulo6"
@@ -198,6 +198,20 @@
                 android:layout_marginBottom="8dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp" />
+            <ImageView
+                android:layout_width="51dp"
+                android:layout_height="49dp"
+                android:id="@+id/imageView4"
+                android:maxWidth="122dp"
+                android:maxHeight="102dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:layout_marginLeft="3dp"
+                android:src="@android:drawable/ic_menu_add"
+                android:layout_marginBottom="20dp"
+                android:elevation="10dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:layout_gravity="center_vertical|center_horizontal" />
 
             <TextView
                 android:text="@string/help_menu1_subtitulo7"
@@ -217,6 +231,20 @@
                 android:layout_marginBottom="8dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp" />
+            <ImageView
+                android:layout_width="51dp"
+                android:layout_height="49dp"
+                android:id="@+id/imageView5"
+                android:maxWidth="122dp"
+                android:maxHeight="102dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:layout_marginLeft="3dp"
+                android:src="@android:drawable/ic_menu_delete"
+                android:layout_marginBottom="20dp"
+                android:elevation="10dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:layout_gravity="center_vertical|center_horizontal" />
 
             <TextView
                 android:text="@string/help_menu1_subtitulo8"
@@ -280,6 +308,20 @@
                 android:layout_marginBottom="8dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp" />
+            <ImageView
+                android:layout_width="51dp"
+                android:layout_height="49dp"
+                android:id="@+id/imageView6"
+                android:maxWidth="122dp"
+                android:maxHeight="102dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:layout_marginLeft="3dp"
+                android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha"
+                android:layout_marginBottom="20dp"
+                android:elevation="10dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:layout_gravity="center_vertical|center_horizontal" />
 
             <TextView
                 android:text="@string/help_menu1_subtitulo10"
@@ -299,6 +341,20 @@
                 android:layout_marginBottom="8dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp" />
+            <ImageView
+                android:layout_width="51dp"
+                android:layout_height="49dp"
+                android:id="@+id/imageView7"
+                android:maxWidth="122dp"
+                android:maxHeight="102dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:layout_marginLeft="3dp"
+                android:src="@drawable/ic_action_exit_to_app"
+                android:layout_marginBottom="20dp"
+                android:elevation="10dp"
+                android:background="@android:drawable/dialog_holo_light_frame"
+                android:layout_gravity="center_vertical|center_horizontal" />
 
 
 
