--- a/app/src/main/res/layout/helpdescription4.xml
+++ b/app/src/main/res/layout/helpdescription4.xml
@@ -6,18 +6,14 @@
     xmlns:app="http://schemas.android.com/apk/lib/com.example.pr_idi.mydatabaseexample"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context="com.example.pr_idi.mydatabaseexample.BaseHelpDescriptionActivity"
-    android:layout_marginBottom="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp">
+    tools:context="com.example.pr_idi.mydatabaseexample.BaseHelpDescriptionActivity">
 
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp">
 
         <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -29,7 +25,9 @@
             android:scrollbarAlwaysDrawVerticalTrack="false"
             android:scrollbarAlwaysDrawHorizontalTrack="false"
             android:scrollbars="vertical"
-            android:paddingTop="16dp">
+            android:paddingTop="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
 
             <TextView
