--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -19,8 +19,8 @@ android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Titulo Frase"
         android:id="@+id/category"
-        android:textSize="19sp"
-        android:textColor="#0c1a3d"
+        android:textSize="18sp"
+        android:textColor="#FF033D2B"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="2dp"
