--- a/app/src/main/res/layout/item_titlesearch.xml
+++ b/app/src/main/res/layout/item_titlesearch.xml
@@ -24,8 +24,8 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Titulo Frase"
             android:id="@+id/category"
-            android:textSize="19sp"
-            android:textColor="#0c1a3d"
+            android:textSize="18sp"
+            android:textColor="#FF033D2B"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="2dp"
@@ -61,7 +61,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginTop="2dp"
                 android:layout_marginLeft="6dp"
                 android:layout_marginRight="4dp"
