--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <!--color name="colorPrimary">#404040</color>
+    <color name="colorPrimaryDark">#1c1c1c</color-->
+
+    <color name="colorPrimary">#05684a</color>
+    <color name="colorPrimaryDark">#033d2b</color>
+    <color name="colorAccent">#ffc905</color>
+    <color name="selected">#05684a</color>
+    <color name="coloritemdrag">#737373</color>
+
 
     <color name="window_background">#e0e0e0</color>
     <color name="primaryColor">#346D7D</color>
