--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="coloritemdrag">#737373</color>
 
 
-    <color name="window_background">#e0e0e0</color>
+    <color name="window_background">#e3e2de</color>
     <color name="primaryColor">#346D7D</color>
     <color name="primaryDarkColor">#1F515F</color>
     <color name="accentColor">#03A9F4</color>
